fix all test case

--- a/tests/typescript/src/index.html
+++ b/tests/typescript/src/index.html
@@ -51,7 +51,10 @@
         var app = new Vue({
             el: '#vueApp',
             data: {
-                message: 'Hello Vue!'
+                message: 'Hello Vue!',
+                obj: {
+                    name:'ujjwal'
+                }
             }
         })
     </script>
