check if element is connected before updating directive

--- a/tests/typescript/src/index.html
+++ b/tests/typescript/src/index.html
@@ -53,7 +53,7 @@
     <script>
         const event = new window.Event('destroy');
         document.querySelector('#temp1').addEventListener("destroy", () => {
-            alert('executed');
+            console.log('executed');
         })
         const parent = document.querySelector('#temp');
         parent.addEventListener("destroy", () => {
